--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="card-body">
         <h5 class="card-title">Premonição 6: Laços De Sangue</h5>
         <p class="card-text">1h50 | Terror</p>
-        <img src="img/18+.png" width="40" style="border-radius: 10">
+        <img src="img/+18.png" width="40" style="border-radius: 10">
       </div>
     </div>
   </div>
